--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ h3 {
 }
 
 p {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 a {
@@ -80,13 +80,15 @@ img {
     color: #D4BF76;
     font-weight: 700;
     font-size: 2.5rem;
+    padding:.8rem .8rem;
     transition:.8s;
 }
 
 .boton-primario:hover{
 	color:#ffffff;
-	padding:1rem 1rem;
-	border-radius: 1rem;
+	padding:.8rem 3rem;
+	border-radius: .25rem;
+	border:1px solid #CBDBEF;
 	background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -126,8 +128,8 @@ div.barra-responsive {
 
 div.barra-responsive a.barras {
     color: #ffffff;
-    font-size: 4rem;
-    margin-right: 1.5rem;
+    font-size: 4.3rem;
+    margin:0 1.5rem;
 }
 
 div.barra-responsive a.barras:hover {
@@ -174,8 +176,9 @@ nav.navegacion a {
     }
 
     nav.navegacion a {
-        margin-right: 3rem;
+        margin-right: 2rem;
         line-height: 2rem;
+
     }
 
     nav.navegacion a:last-of-type {
@@ -189,7 +192,7 @@ div.texto-header {
 }
 
 div.texto-header h2{
-	font-size: 3rem;
+	font-size: 3.2rem;
 	font-family: 'PT-Sans',sans-serif;
 	font-style: italic;
 	color:#80A2D2;
@@ -203,7 +206,7 @@ div.texto-header h2{
 }
 
 div.texto-header p{
-	font-size: 2.5rem;
+	font-size: 2.8rem;
 	font-family: 'PT-Sans',sans-serif;
 	font-style: italic;
 	color:#ffffff;
@@ -215,3 +218,47 @@ div.texto-header p{
 		font-size: 3.5rem;
 	}
 }
+
+/*Sección Nosotros*/
+
+section.seccion-nosotros{
+	margin-top:3rem;
+	text-align: center;
+}
+section.seccion-nosotros h1{
+	border-bottom: 1px solid #C8BB8B;
+	color: #DBB530;
+}
+
+div.texto-nosotros p span{
+	font-weight: 700;
+	color:#80A2D2;
+}
+
+@media (min-width: 768px) {
+	div.nosotros{
+		display:flex;
+		justify-content: space-between;
+		align-items: center;
+		padding-top: 2rem;
+	}
+
+	div.texto-nosotros{
+		padding: 0 4rem;
+		flex:1 1 calc(60% - 3rem);
+	}
+
+	div.imagen-nosotros{
+		flex:1 1 calc(40% - 1rem);
+	}
+}
+
+/*Sección Principal Servicios*/
+
+main.seccion-principal{
+}
+
+
+
+
+
