--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,20 @@
       font-size: 62.5%;
       line-height: 1.4;
   }
-
+  
   *,
   *:before,
   *:after {
       box-sizing: inherit;
   }
-
+  
   body {
       font-family: 'Open Sans', sans-serif;
       background-color: #ffffff;
       background-blend-mode: normal;
   }
-
-  :root {
+  
+   :root {
       --color-uno: #DBB499;
       --color-dos: #3F567B;
       --color-tres: #DAD099;
@@ -24,16 +24,15 @@
       --color-cinco: #DFE599;
       --color-seis: #b9afa1;
       --color-siete: #D4BF76;
-      --color-ocho:#9E9991;
-
+      --color-ocho: #9E9991;
   }
-
+  
   h1 {
       font-family: 'PT Sans', sans-serif;
       font-size: 4.5rem;
       margin: 0;
   }
-
+  
   h2 {
       font-family: 'Libre Baskerville', serif;
       font-style: italic;
@@ -41,58 +40,57 @@
       text-transform: uppercase;
       border-bottom: 1px solid #D4BF76;
   }
-
+  
   h3 {
       font-family: 'PT Sans', sans-serif;
       font-size: 2.4rem;
       text-transform: uppercase;
   }
-
+  
   p {
       font-size: 1.8rem;
       font-family: 'Roboto', sans-serif;
       font-weight: 500;
   }
-
+  
   a {
       font-size: 1.8rem;
       text-decoration: none;
   }
-
+  
   img {
       width: 100%;
   }
-
   /*Utilidades*/
-
+  
   .contenedor {
       width: 98%;
       margin: 0 auto;
   }
-
+  
   @media (min-width: 480px) {
       .contenedor {
           width: 95%;
       }
   }
-
+  
   @media (min-width: 768px) {
       .contenedor {
           max-width: 1100px;
           width: 90%;
       }
   }
-
+  
   @media (min-width: 992px) {
       .contenedor {
           width: 93%;
       }
   }
-
+  
   .no-margin {
       margin: 0;
   }
-
+  
   .boton-primario {
       color: #D4BF76;
       font-weight: 700;
@@ -103,7 +101,7 @@
       margin-right: 2rem;
       transition: .8s;
   }
-
+  
   .boton-primario:hover {
       color: #ffffff;
       padding: .8rem 2rem;
@@ -111,7 +109,7 @@
       border: 1px solid #CBDBEF;
       background-color: rgba(0, 0, 0, 0.1);
   }
-
+  
   .boton-secundario {
       background-color: #D4BF76;
       color: #000000;
@@ -128,27 +126,26 @@
       box-shadow: 0px 5px 9px 0px rgba(50, 50, 50, 0.66);
       transition: .8s;
   }
-
+  
   @media (min-width: 768px) {
       .boton-secundario {
           display: inline-block;
       }
   }
-
+  
   .boton-secundario:hover {
       border: 1px solid #C8BB8B;
       box-shadow: none;
   }
-
+  
   div.separador {
       background-color: var(--color-uno);
       width: 40%;
       height: 1px;
       margin: 0 auto;
   }
-
   /*Header*/
-
+  
   section.navegacion-principal {
       background: url(../img/fondo.jpg);
       background-position: center center;
@@ -163,7 +160,7 @@
       -moz-box-shadow: 0px 9px 14px 0px rgba(50, 50, 50, 0.71);
       box-shadow: 0px 9px 14px 0px rgba(50, 50, 50, 0.71);
   }
-
+  
   section.navegacion-principal:before {
       content: '';
       position: absolute;
@@ -173,32 +170,32 @@
       right: 0;
       background-color: rgba(0, 0, 0, 0.5);
   }
-
+  
   div.barra {
       position: relative;
   }
-
+  
   div.barra-responsive {
       display: flex;
       justify-content: space-between;
       align-items: center;
   }
-
+  
   div.barra-responsive a.barras {
       color: #ffffff;
       font-size: 4.3rem;
       margin: 0 1.5rem;
   }
-
+  
   div.barra-responsive a.barras:hover {
       cursor: pointer;
   }
-
+  
   div.barra-responsive a.logo {
       margin-top: 2rem;
       width: 40%;
   }
-
+  
   @media (min-width: 768px) {
       div.barra {
           display: flex;
@@ -206,27 +203,22 @@
           align-items: center;
           position: relative;
       }
-
       div.barra-responsive {
           display: flex;
           justify-content: space-between;
           align-items: center;
       }
-
       div.barra-responsive a.barras {
           display: none;
       }
-
       div.barra-responsive a.barras:hover {
           cursor: pointer;
       }
-
-
       div.barra-responsive a.logo img {
           width: 120%;
       }
   }
-
+  
   nav.navegacion {
       text-align: center;
       border: 1px solid #f1f1f1;
@@ -234,12 +226,12 @@
       background: none;
       box-shadow: none;
   }
-
+  
   nav.navegacion a {
       display: block;
       line-height: 4rem;
   }
-
+  
   @media (min-width: 768px) {
       nav.navegacion {
           flex: 1 1 calc(60%);
@@ -248,23 +240,20 @@
           align-items: center;
           border: none;
       }
-
       nav.navegacion a {
           flex: 1 1 calc(33.3%);
           padding: 0 2rem;
           line-height: 2rem;
       }
-
       nav.navegacion a:last-of-type {
           margin-right: 0;
       }
   }
-
-
+  
   div.texto-header {
       position: relative;
   }
-
+  
   div.texto-header h2 {
       font-size: 3.2rem;
       font-family: 'PT Sans', sans-serif;
@@ -272,13 +261,13 @@
       color: var(--color-tres);
       text-align: right;
   }
-
+  
   @media (min-width: 768px) {
       div.texto-header h2 {
           font-size: 4.5rem;
       }
   }
-
+  
   div.texto-header p {
       font-size: 2.8rem;
       font-family: 'PT Sans', sans-serif;
@@ -286,20 +275,19 @@
       color: var(--color-siete);
       text-align: right;
   }
-
+  
   @media (min-width: 768px) {
       div.texto-header p {
           font-size: 3.5rem;
       }
   }
-
   /*Sección Nosotros*/
-
+  
   section.seccion-nosotros {
       margin-top: 3rem;
       text-align: center;
   }
-
+  
   section.seccion-nosotros h1 {
       font-family: 'Libre Baskerville', serif;
       font-weight: 400;
@@ -307,16 +295,16 @@
       text-transform: Uppercase;
       margin: 7rem auto 5rem auto;
   }
-
+  
   section.seccion-nosotros i {
       font-size: 5rem;
       color: var(--color-siete);
   }
-
+  
   div.texto-nosotros {
       margin: 4rem 0 0 0;
   }
-
+  
   div.texto-nosotros p {
       font-family: 'Libre Baskerville', serif;
       font-style: italic;
@@ -324,12 +312,12 @@
       padding: 1rem 3rem;
       line-height: 4rem;
   }
-
+  
   div.texto-nosotros p span {
       font-weight: 700;
       color: var(--color-dos);
   }
-
+  
   div.imagen-nosotros {
       width: 70%;
       -webkit-box-shadow: 3px 2px 9px 0px rgba(50, 50, 50, 0.75);
@@ -338,37 +326,36 @@
       margin: 2rem auto;
       overflow: hidden;
   }
-
+  
   div.imagen-nosotros img {
       -webkit-transition: all .5s ease-in-out;
   }
-
+  
   div.imagen-nosotros img:hover {
       transform: scale(1.1);
   }
-
+  
   @media (min-width: 768px) {
       div.imagen-nosotros {
           width: 60%;
       }
   }
-
+  
   div.variante p {
       font-family: 'PT Sans', serif;
       font-style: italic;
       font-weight: 600;
       color: var(--color-ocho);
   }
-
+  
   @media (min-width: 768px) {
       div.variante p {
           padding: 2rem 7rem;
           line-height: 4rem;
       }
   }
-
   /*Sección Principal Servicios*/
-
+  
   main.seccion-principal {
       background-color: var(--color-cinco);
       height: auto;
@@ -379,32 +366,31 @@
       box-shadow: 3px 2px 9px 0px rgba(50, 50, 50, 0.75);
       text-align: center;
   }
-
-
+  
   main.seccion-principal h2 {
       text-align: center;
       font-weight: 400;
       margin: 2rem auto;
       color: var(--color-dos);
   }
-
+  
   @media (min-width: 768px) {
       main.seccion-principal h2 {
           margin-bottom: 3rem;
       }
   }
-
+  
   main.seccion-principal a {
       margin: 4rem;
       background-color: var(--color-siete);
-      border:none;
+      border: none;
   }
-
-   main.seccion-principal a:hover {
+  
+  main.seccion-principal a:hover {
       background-color: var(--color-cuatro);
-      border:none;
+      border: none;
   }
-
+  
   div.servicio {
       flex: 1 1 calc(33.3% - 1rem);
       text-align: center;
@@ -416,52 +402,47 @@
       -webkit-box-shadow: 3px 2px 9px 0px rgba(50, 50, 50, 0.75);
       -moz-box-shadow: 3px 2px 9px 0px rgba(50, 50, 50, 0.75);
       box-shadow: 3px 2px 9px 0px rgba(50, 50, 50, 0.75);
-
   }
-
+  
   @media (min-width: 768px) {
       div.tabla-servicios {
           display: flex;
       }
-
       div.servicio {
           margin-right: 2rem;
       }
-
       div.servicio:last-of-type {
           margin-right: 0
       }
   }
-
+  
   div.servicio h3 {
       color: var(--color-dos);
   }
-
+  
   div.servicio i {
       color: var(--color-siete);
       font-size: 7rem;
   }
-
+  
   i.salud {
       color: #DE1414;
   }
-
+  
   i.edificio {
       color: #167BDA;
   }
-
+  
   i.regalo {
       color: #1ED90F;
   }
-
+  
   div.servicio p {
       font-family: 'Libre Baskerville', serif;
       color: var(--color-cuatro);
-
   }
-
   /*Galería*/
-
+  
   section.galeria-index {
       padding: 2rem;
       background-color: #E3CFB0;
@@ -469,9 +450,8 @@
       -webkit-box-shadow: 0px -9px 14px 0px rgba(50, 50, 50, 0.71);
       -moz-box-shadow: 0px -9px 14px 0px rgba(50, 50, 50, 0.71);
       box-shadow: 0px -9px 14px 0px rgba(50, 50, 50, 0.71);
-
   }
-
+  
   section.galeria-index h2 {
       text-align: center;
       color: var(--color-dos);
@@ -479,17 +459,17 @@
       margin: 1rem auto 3rem auto;
       border: none;
   }
-
+  
   section.galeria-index i {
       margin-left: 2rem;
       font-size: 4rem;
-      color:#D67D05;
+      color: #D67D05;
   }
-
+  
   section.galeria-index a:hover {
       background-color: var(--color-seis);
   }
-
+  
   div.galeria {
       margin: 5rem auto;
       padding: 2rem 3rem;
@@ -498,17 +478,16 @@
       column-gap: 1rem;
       row-gap: 3rem;
   }
-
-
+  
   div.galeria a {
       overflow: hidden;
       transition: 1s;
   }
-
+  
   div.galeria-texto {
       text-align: center;
   }
-
+  
   div.galeria-texto p {
       font-family: 'Libre Baskerville', serif;
       font-style: italic;
@@ -519,15 +498,15 @@
       margin: 5rem auto;
       color: var(--color-dos);
   }
-
+  
   div.galeria-texto p span {
       color: #000000;
   }
-
+  
   div.galeria-texto a {
       margin-bottom: 5rem;
   }
-
+  
   div.galeria-flex {
       text-align: center;
       margin: 3rem 0;
@@ -536,9 +515,8 @@
       border: 1px solid linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
       transition: all .4s ease;
   }
-
+  
   @media (min-width: 768px) {
-
       div.galeria-flex {
           display: flex;
           justify-content: space-between;
@@ -546,35 +524,55 @@
           flex: 1 1 calc(33.3% - 3rem);
       }
   }
-
-
   /* Galería Principal*/
-
+  
   section.galeria-principal h1 {
       text-align: center;
       color: #DBB530;
       border-bottom: 1px solid #C8BB8B;
+      font-family: 'Libre Baskerville', serif;
+      font-weight: 400;
+      text-transform: Uppercase;
   }
-
+  
   div.galeria-interna {
       padding: 2rem 3rem;
       display: grid;
       column-gap: 2rem;
       row-gap: 3rem;
   }
-
+  
   div.galeria-interna img {
-      height: 20rem;
+      box-shadow: 0 8px 10px -4px rgba(0, 0, 0, .6);
+      border-radius: 15px;
+      width: 300px;
+      height: 300px;
+      object-fit: cover;
+      filter: brightness(70%);
+      cursor: pointer;
+      animation: escalar 1.5s infinite alternate;
   }
-
+  
+  @keyframes escalar {
+      to {
+          transform: scale(1);
+      }
+      from {
+          transform: scale(1.05);
+      }
+  }
+  
+  div.galeria-interna img:hover {
+      filter: brightness(100%);
+  }
+  
   @media (min-width: 768px) {
       div.galeria-interna {
           grid-template-columns: repeat(3, 1fr);
       }
   }
-
   /*Contacto*/
-
+  
   section.contacto {
       margin: 0 0 6rem 0;
       position: relative;
@@ -584,18 +582,18 @@
       -moz-box-shadow: 1px 9px 26px 0px rgba(50, 50, 50, 0.71);
       box-shadow: 1px 9px 26px 0px rgba(50, 50, 50, 0.71);
   }
-
+  
   @media (min-width: 768px) {
       section.contacto {
           height: 50rem;
       }
   }
-
+  
   section.contacto::before {
       background-image: url(../img/abuelos.jpg);
       content: '';
   }
-
+  
   .parallax::before {
       width: 100%;
       height: 100%;
@@ -609,107 +607,93 @@
       -webkit-filter: brightness(0.8);
       filter: brightness(0.4);
   }
-
+  
   div.tabla-contactos {
       text-align: center;
       padding: 4rem 0;
       position: relative;
       flex: 1;
   }
-
-
+  
   @media (min-width: 768px) {
       div.tabla-contactos {
           display: flex;
           justify-content: space-between;
           align-items: center;
       }
-
       div.icono-contacto {
           margin: 0 auto;
           flex: 1 1 calc(33.3% - 2rem);
       }
   }
-
+  
   div.icono-contacto {
       transition: .4s;
       padding: 7rem 0;
   }
-
+  
   div.icono-contacto i {
       font-size: 6rem;
       color: var(--color-tres);
       transition: all 1s ease;
   }
-
+  
   div.icono-contacto i:hover {
       transform: scale(1.5);
   }
-
+  
   div.icono-contacto p {
       margin-bottom: 3rem;
       font-size: 2.5rem;
       color: var(--color-tres);
   }
-
-
-
   /* Mapa */
-
+  
   section.contenedor-mapa {
       text-align: center;
       margin: 5rem auto;
       padding: 4rem;
-
   }
-
+  
   @media (min-width: 768px) {
       section.contenedor-mapa {
           display: flex;
           justify-content: space-between;
           align-items: flex-start;
-
       }
-
       div.texto-mapa {
           flex: 1 1 calc(60% - 1rem);
           margin-right: 4rem;
       }
-
       div.mapa {
           flex: 1 1 calc(40% - 1rem);
       }
   }
-
+  
   div.texto-mapa h2 {
       color: var(--color-dos);
       font-weight: 400;
       border-bottom: 1px solid var(--color-cuatro);
   }
-
+  
   div.texto-mapa p {
       font-family: 'Libre Baskerville', serif;
       color: var(--color-seis);
       line-height: 3rem;
   }
-
+  
   div.texto-mapa p:last-of-type {
       color: var(--color-siete);
       line-height: 3rem;
   }
-
+  
   @media (min-width: 768px) {
       div.texto-mapa p {
           line-height: 4rem;
       }
   }
-
-
-
-
-
   /*Botón WhatsApp */
-
+  
   #whatsapp a {
       background: none;
       position: fixed;
@@ -719,54 +703,50 @@
       left: 1%;
       text-decoration: none;
   }
-
+  
   #whatsapp a p {
       position: fixed;
-      top: 90%;
-      left: 1%;
-      background-color: #7FA1D7;
+      top: 79%;
+      left: 5%;
+      /*  background-color: #7FA1D7; */
       padding: 2rem;
       border-radius: 0.8rem;
-      border: 1px solid #f1f1f1;
+      /*border: 1px solid #f1f1f1;*/
       font-weight: 700;
+      font-family: "Libre Baskerville", serif;
+      font-style: italic;
       text-decoration: none;
+      color: #000000;
   }
-
   /* Footer */
-
-
+  
   footer {
       background: var(--color-cinco);
       height: auto;
       text-align: center;
   }
-
+  
   div.minimapa i {
       width: 50%;
   }
-
-
+  
   @media(min-width: 768px) {
-
       div.footer-contenido {
           display: flex;
           align-items: center;
           justify-content: space-between;
           padding: 3rem;
       }
-
-
       div.informacion {
           padding: 2rem;
           Flex: 1 1 calc(50% - 2 rem);
       }
-
       div.minimapa {
           padding: 2rem;
           Flex: 1 1 calc(50% - 2 rem);
       }
   }
-
+  
   .footer2 {
       background: var(--color-uno);
       height: 5rem;
@@ -774,22 +754,22 @@
       text-align: center;
       padding-bottom: 30px;
   }
-
+  
   div.footer-contenido {
       padding-top: 3rem;
   }
-
+  
   div.footer2 p {
       margin: 0;
       font-weight: 400;
       font-family: 'Libre Baskerville', serif;
       color: darkslategray;
   }
-
+  
   div.informacion {
       text-align: left;
   }
-
+  
   div.informacion p {
       color: darkslategray;
       font-weight: 400;
@@ -797,7 +777,7 @@
       font-size: 2.5rem;
       text-align: left;
   }
-
+  
   div.informacion p span {
       font-size: 2.5rem;
       color: var(--color-cuatro);
@@ -807,28 +787,25 @@
       font-style: italic;
       text-align: center;
   }
-
   /*Paginas Internas*/
   /*Navegación Interna*/
-
+  
   section.barra-interna {
       background-color: #353535;
   }
-
   /*Galeria Interna*/
-
+  
   @media (min-width: 768px) {
       div.galeria-interna {
           grid-template-columns: repeat(3, 1fr);
       }
   }
-
-/*Servicios Internos*/
-
+  /*Servicios Internos*/
+  
   main.servicios-internos h2 {
       text-align: center;
   }
-
+  
   div.servicio-unico {
       background-color: #ffffff;
       text-align: center;
@@ -840,7 +817,7 @@
       box-shadow: 5px 3px 10px 0px rgba(255, 50, 50, 0.68);
       transition: ease 1s all;
   }
-
+  
   div.servicio-unico:hover {
       transform: scale(1.1);
       border: 1px solid #C8BB8B;
@@ -848,20 +825,20 @@
       -moz-box-shadow: 5px 3px 10px 0px rgba(48, 50, 255, 0.68);
       box-shadow: 5px 3px 10px 0px rgba(48, 50, 255, 0.68);
   }
-
+  
   div.servicio-unico h3 {
       border-bottom: 1px solid #C8BB8B;
   }
-
+  
   div.servicio-unico i {
       font-size: 8rem;
   }
-
+  
   div.servicio-unico ul {
       text-align: left;
       padding: 6rem;
   }
-
+  
   div.servicio-unico ul li {
       font-size: 2rem;
       line-height: 4rem;
@@ -873,19 +850,17 @@
       padding: 1.5rem;
       margin-top: 2rem;
       transition: 1s all ease;
-
   }
-
+  
   div.servicio-unico ul li:hover {
       transform: scale(1.1);
       border: 1px solid #E74C3C;
   }
-
-
+  
   div.servicio-unico ul li p {
       flex: 1 1 calc(90%);
   }
-
+  
   div.servicio-unico ul li i {
       margin: 2rem auto;
       padding: 0 4rem;
@@ -894,28 +869,23 @@
       flex: 1 1 calc(10%);
       color: #273746;
   }
-
-
   /*Navegación Interna*/
-
+  
   section.barra-interna {
       background-color: #353535;
   }
-
   /* Iconos Font Awesome */
-
+  
   .fa-map-marker-alt {
       color: #EA4335;
   }
-
-
   /*Nosotros*/
-
+  
   main.nosotros-interno {
       height: auto;
       margin-bottom: 5rem;
   }
-
+  
   section.seccion-casa {
       background-color: #f1f1f1;
       margin-bottom: 4rem;
@@ -925,13 +895,13 @@
       -moz-box-shadow: 5px 5px 9px 0px rgba(50, 50, 50, 1);
       box-shadow: 5px 5px 9px 0px rgba(50, 50, 50, 1);
   }
-
+  
   section.seccion-casa h2 {
       text-align: center;
       border-bottom: 1px solid #C8BB8B;
       padding: 2rem 0;
   }
-
+  
   @media (min-width: 768px) {
       div.nosotros-flex {
           display: flex;
@@ -939,34 +909,33 @@
           align-items: flex-start;
       }
   }
-
+  
   div.casa-data {
       margin-right: 3rem;
   }
-
+  
   div.casa-data ul li {
       list-style: none;
       line-height: 4rem;
       font-size: 2.2rem;
       font-weight: 700;
   }
-
+  
   div.imagenes img {
       margin-bottom: 2rem;
       -webkit-transition: all .4s ease-in-out;
   }
-
+  
   div.imagenes img:hover {
       -webkit-transform: scale(1.1);
   }
-
-
+  
   section.cita-container {
       margin-top: 5rem;
       background-color: #5f9ea0;
       height: 30rem;
   }
-
+  
   div.cita {
       padding: 5rem 0 0 0;
       display: flex;
@@ -974,12 +943,12 @@
       align-items: center;
       flex-direction: column;
   }
-
+  
   div.cita i {
       font-size: 8rem;
       color: #ffffff;
   }
-
+  
   div.cita blockquote {
       font-size: 4rem;
       font-weight: 700;
